// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingDetailPage matches snapshot for error state 1`] = `
<div
  class="p-6"
>
  <div
    class="flex items-center justify-center h-64"
  >
    <div
      class="text-red-500"
    >
      Error loading booking details
    </div>
  </div>
</div>
`;

exports[`BookingDetailPage matches snapshot for loaded state 1`] = `
<div
  class="min-h-screen bg-gray-50 p-6"
>
  <div
    class="mb-6"
  >
    <nav
      class="text-sm text-gray-600"
    >
      <span
        class="hover:text-gray-900 cursor-pointer"
      >
        Guests
      </span>
      <span
        class="mx-2"
      >
        &gt;
      </span>
      <span
        class="text-gray-900"
      >
        Guest Info
      </span>
    </nav>
  </div>
  <div
    class="flex items-center gap-4 mb-6"
  >
    <button
      aria-label="Go back"
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-9 rounded-md p-2"
    >
      <svg
        class="lucide lucide-arrow-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
    </button>
    <h1
      class="text-2xl font-bold text-gray-900"
    >
      John
       
      Doe
    </h1>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-2 gap-6"
  >
    <div
      class="space-y-6"
    >
      <div
        data-testid="guest-info-card"
      >
        <div>
          Guest: 
          John
           
          Doe
        </div>
        <div>
          Status: 
          BOOKED
        </div>
        <button>
          Update Status
        </button>
      </div>
    </div>
    <div
      class="space-y-6"
    >
      <div
        data-testid="room-details-card"
      >
        <div>
          Room: 
          Deluxe Suite
        </div>
        <div>
          Room ID: 
          room-1
        </div>
      </div>
      <div
        data-testid="price-detail-card"
      >
        <div>
          Price: 
          150000
          ₮
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookingDetailPage matches snapshot for loading state 1`] = `
<div
  class="p-6"
>
  <div
    class="flex items-center justify-center h-64"
  >
    <div
      class="text-gray-500"
    >
      Loading booking details...
    </div>
  </div>
</div>
`;
